--- a/prometheus-config.yaml
+++ b/prometheus-config.yaml
@@ -2,53 +2,45 @@ global:
   scrape_interval: 10s
   evaluation_interval: 10s
 
-# see https://prometheus.io/docs/prometheus/latest/configuration/configuration/#kubernetes_sd_config
-# here we configure scrape targets based on services in the kafka namespace
-kubernetes_sd_configs:
-- role: services 
-  namespaces:
-    names:
-    - kafka 
+scrape_configs:
+    - job_name: kafka
 
-# see https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
-# here we dynamically rewrite the label set of a target before it gets scraped 
-relabel_configs:
-- source_labels: [__meta_kubernetes_service_label_app]
-  separator: ;
-  regex: config-example
-  replacement: $1
-  action: keep
-- source_labels: [__meta_kubernetes_endpoint_port_name]
-  separator: ;
-  regex: https
-  replacement: $1
-  action: keep
-- source_labels: [__meta_kubernetes_namespace]
-  separator: ;
-  regex: (.*)
-  target_label: namespace
-  replacement: $1
-  action: replace
-- source_labels: [__meta_kubernetes_pod_name]
-  separator: ;
-  regex: (.*)
-  target_label: pod
-  replacement: $1
-  action: replace
-- source_labels: [__meta_kubernetes_service_name]
-  separator: ;
-  regex: (.*)
-  target_label: service
-  replacement: $1
-  action: replace
-- source_labels: [__meta_kubernetes_service_name]
-  separator: ;
-  regex: (.*)
-  target_label: job
-  replacement: ${1}
-  action: replace
-- separator: ;
-  regex: (.*)
-  target_label: endpoint
-  replacement: https
-  action: replace
+      kubernetes_sd_configs:
+      - role: endpoints
+        namespaces:
+          names:
+          - kafka
+
+      relabel_configs:
+      - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_should_be_scraped]
+        action: keep
+        regex: true
+      - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_scrape_port]
+        action: replace
+        regex: ([^:]+)(?::\d+)?;(\d+)
+        replacement: $1:$2
+        target_label: __address_
+      - source_labels: [__meta_kubernetes_namespace]
+        separator: ;
+        regex: (.*)
+        target_label: namespace
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_pod_name]
+        separator: ;
+        regex: (.*)
+        target_label: pod
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_service_name]
+        separator: ;
+        regex: (.*)
+        target_label: service
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_service_name]
+        separator: ;
+        regex: (.*)
+        target_label: job
+        replacement: ${1}
+        action: replace
